--- a/hosting/package.json
+++ b/hosting/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/typography": "^0.5.9",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
